--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SLIDE PUZZLE</title>
+    <title>SLIDING PUZZLE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h1>SLIDE PUZZLE</h1></header>
+    <header><h1>SLIDING PUZZLE</h1></header>
     <div id="puzzle_container">
         <div class="puzzle_block">1</div>
         <div class="puzzle_block">2</div>
